--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,7 +17,7 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        buildConfigField STRING, API_URL, '"http://pokeapi.co/"'
+        buildConfigField STRING, API_URL, '"http://api.football-data.org/v1/"'
 
     }
     buildTypes {
@@ -37,8 +37,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.0'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.0'
+    androidTestImplementation 'com.android.support.test:runner:1.0.1'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
 
     //dagger
     kapt 'com.google.dagger:dagger-compiler:2.11'
@@ -46,14 +46,17 @@ dependencies {
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.11'
     //retrofit
     compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    compile "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
 
+    //okhttp
     compile 'com.squareup.okhttp3:okhttp:3.8.0'
     compile 'com.squareup.okhttp3:logging-interceptor:3.7.0'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.2.0'
+    //gson
     compile 'com.google.code.gson:gson:2.8.0'
-
+    //rx
+    compile 'io.reactivex.rxjava2:rxjava:2.1.2'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //timber
     compile 'com.jakewharton.timber:timber:4.5.1'
-
-
 }
