--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,9 @@ android {
     kapt {
         generateStubs = true
     }
+    configurations {
+        ktlint
+    }
 }
 
 dependencies {
@@ -59,4 +62,22 @@ dependencies {
     compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
     //timber
     compile 'com.jakewharton.timber:timber:4.5.1'
+
+    ktlint 'com.github.shyiko:ktlint:0.9.0'
+
+}
+
+task ktlint(type: JavaExec) {
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "src/**/*.kt"
+    // prepend "--reporter=plain?group_by_file" arg to change the reporter
+}
+
+check.dependsOn ktlint
+
+task ktlintFormat(type: JavaExec) {
+    main = "com.github.shyiko.ktlint.Main"
+    classpath = configurations.ktlint
+    args "-F", "src/**/*.kt"
 }
