--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,12 @@ dependencies {
     //timber
     compile 'com.jakewharton.timber:timber:4.5.1'
 
+    //archetecture components
+    compile "android.arch.lifecycle:runtime:1.0.0-alpha9"
+    compile "android.arch.lifecycle:extensions:1.0.0-alpha9"
+    annotationProcessor "android.arch.lifecycle:compiler:1.0.0-alpha9"
+
+    //lint
     ktlint 'com.github.shyiko:ktlint:0.9.0'
 
 }
