--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion 26
-    buildToolsVersion "26.0.0"
+    buildToolsVersion "26.0.1"
 
     def API_URL = 'API_URL'
     def STRING = 'String'
@@ -42,7 +42,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
-
+    testImplementation 'org.mockito:mockito-core:2.8.9'
+    testImplementation "android.arch.persistence.room:testing:1.0.0-alpha9-1"
     //dagger
     kapt 'com.google.dagger:dagger-compiler:2.11'
     implementation 'com.google.dagger:dagger:2.11'
@@ -53,7 +54,7 @@ dependencies {
     implementation "com.squareup.retrofit2:adapter-rxjava2:2.3.0"
 
     //okhttp
-    implementation 'com.squareup.okhttp3:okhttp:3.8.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.8.1'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.7.0'
     //gson
     implementation 'com.google.code.gson:gson:2.8.0'
@@ -70,6 +71,12 @@ dependencies {
     implementation "android.arch.persistence.room:runtime:$arch_version"
     kapt "android.arch.persistence.room:compiler:$arch_version"
     implementation "android.arch.persistence.room:rxjava2:$arch_version"
+
+    testImplementation ("android.arch.core:core-testing:$arch_version", {
+        exclude group: 'com.android.support', module: 'support-compat'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude group: 'com.android.support', module: 'support-core-utils'
+    })
 
     //lint
     ktlint 'com.github.shyiko:ktlint:0.9.0'
