--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     testImplementation 'org.mockito:mockito-core:2.8.9'
     testImplementation "android.arch.persistence.room:testing:1.0.0-alpha9-1"
+
+    //anko
+    implementation "org.jetbrains.anko:anko-commons:0.10.1"
+
     //dagger
     kapt 'com.google.dagger:dagger-compiler:2.11'
     implementation 'com.google.dagger:dagger:2.11'
